PDI-3716: Windows launchers (.bat): multiple issues, PDI-2159:  Kitchen can not be run on Windows 2000
git-svn-id: svn://source.pentaho.org/svnkettleroot/Kettle/trunk@13123 5fb7f6ec-07c1-534a-b4ca-9155e429e800