@@ -1,57 +1,95 @@
 @echo off
+setlocal
+
+:: **************************************************
+:: ** Kettle home                                  **
+:: **************************************************
+
+if "%KETTLE_HOME%"=="" set KETTLE_HOME=%~dp0
+if %KETTLE_HOME:~-1%==\ set KETTLE_HOME=%KETTLE_HOME:~0,-1%
+
+cd %KETTLE_HOME%
 
 REM **************************************************
-REM ** Make sure we use the correct J2SE version!   **
-REM ** Uncomment the PATH line in case of trouble   **
+REM ** Set up usage of JAVA_EXT_LIBS                **
 REM **************************************************
 
-REM set PATH=C:\j2sdk1.4.2_01\bin;.;%PATH%
+if defined JAVA_EXT_DIRS goto :externalExtDirs
+:noExternalExtDirs
+set JAVA_EXT_DIRS=.
+goto endExtDirs
 
-REM **************************************************
-REM ** Libraries used by Kettle:                    **
-REM **************************************************
+:externalExtDirs
+set JAVA_EXT_DIRS=%JAVA_EXT_DIRS%;%~dp0
 
-set CLASSPATH=.
+:endExtDirs
+
+if DEFINED JAVA_HOME goto withJavaHome
+:noJavaHome
+goto endJavaHome
+
+:withJavaHome
+REM Every directory contains the null device. So check
+REM for directory existence:
+if exist %JAVA_HOME%\jre\lib\ext\nul set JAVA_EXT_DIRS=%JAVA_HOME%\jre\lib\ext;%JAVA_EXT_DIRS%
+if exist %JAVA_HOME%\lib\ext\nul set JAVA_EXT_DIRS=%JAVA_HOME%\lib\ext;%JAVA_EXT_DIRS%
+set JAVA_EXT_DIRS=%JAVA_EXT_DIRS%
+goto endJavaHome
+
+:endJavaHome
 
 REM ******************
 REM   KETTLE Library
-REM ******************
+REM *****************
 
-set CLASSPATH=%CLASSPATH%;lib\kettle-core.jar
-set CLASSPATH=%CLASSPATH%;lib\kettle-db.jar
-set CLASSPATH=%CLASSPATH%;lib\kettle-engine.jar
+set JAVA_EXT_DIRS=%JAVA_EXT_DIRS%;%KETTLE_HOME%\lib
 
 REM **********************
 REM   External Libraries
 REM **********************
 
-REM Loop the libext directory and add the classpath.
-REM The following command would only add the last jar: FOR %%F IN (libext\*.jar) DO call set CLASSPATH=%CLASSPATH%;%%F
-REM So the circumvention with a subroutine solves this ;-)
+set JAVA_EXT_DIRS=%JAVA_EXT_DIRS%;%KETTLE_HOME%\libext
+set JAVA_EXT_DIRS=%JAVA_EXT_DIRS%;%KETTLE_HOME%\libext\JDBC
+set JAVA_EXT_DIRS=%JAVA_EXT_DIRS%;%KETTLE_HOME%\libext\webservices
+set JAVA_EXT_DIRS=%JAVA_EXT_DIRS%;%KETTLE_HOME%\libext\spring
+set JAVA_EXT_DIRS=%JAVA_EXT_DIRS%;%KETTLE_HOME%\libext\commons
+set JAVA_EXT_DIRS=%JAVA_EXT_DIRS%;%KETTLE_HOME%\libext\web
+set JAVA_EXT_DIRS=%JAVA_EXT_DIRS%;%KETTLE_HOME%\libext\pentaho
+set JAVA_EXT_DIRS=%JAVA_EXT_DIRS%;%KETTLE_HOME%\libext\mondrian
+set JAVA_EXT_DIRS=%JAVA_EXT_DIRS%;%KETTLE_HOME%\libext\salesforce
 
-FOR %%F IN (libext\*.jar) DO call :addcp %%F
-FOR %%F IN (libext\JDBC\*.jar) DO call :addcp %%F
-FOR %%F IN (libext\webservices\*.jar) DO call :addcp %%F
-FOR %%F IN (libext\commons\*.jar) DO call :addcp %%F
-FOR %%F IN (libext\web\*.jar) DO call :addcp %%F
-FOR %%F IN (libext\pentaho\*.jar) DO call :addcp %%F
-FOR %%F IN (libext\spring\*.jar) DO call :addcp %%F
-FOR %%F IN (libext\jfree\*.jar) DO call :addcp %%F
-FOR %%F IN (libext\mondrian\*.jar) DO call :addcp %%F
-FOR %%F IN (libext\salesforce\*.jar) DO call :addcp %%F
-FOR %%F IN (libext\feeds\*.jar) DO call :addcp %%F
+REM **************************************************
+REM   Platform Specific SWT       **
+REM **************************************************
 
-goto extlibe
+REM The following line is predicated on the 64-bit Sun
+REM java output from -version which
+REM looks like this (at the time of this writing):
+REM
+REM java version "1.6.0_17"
+REM Java(TM) SE Runtime Environment (build 1.6.0_17-b04)
+REM Java HotSpot(TM) 64-Bit Server VM (build 14.3-b01, mixed mode)
+REM
+FOR /F %%a IN ('java -version 2^>^&1^|find /C "64-Bit"') DO (SET /a IS64BITJAVA=%%a)
+IF %IS64BITJAVA% == 1 GOTO :USE64
+:USE32
+REM ===========================================
+REM Using 32bit Java, so include 32bit SWT Jar
+REM ===========================================
+set LIBSPATH=%KETTLE_HOME%\libswt\win32
+GOTO :CONTINUE
+:USE64
+REM ===========================================
+REM Using 64bit java, so include 64bit SWT Jar
+REM ===========================================
+set LIBSPATH=%KETTLE_HOME%\libswt\win64
+:CONTINUE
 
-:addcp
-set CLASSPATH=%CLASSPATH%;%1
-goto :eof
+echo %LIBSPATH%
 
-:extlibe
-
-REM **********************
-REM   Collect arguments
-REM **********************
+REM *******************************************
+REM   Collect arguments from the command line
+REM *******************************************
 
 set _cmdline=
 :TopArg
@@ -61,13 +99,12 @@ shift
 goto TopArg
 :EndArg
 
-
 REM ******************************************************************
 REM ** Set java runtime options                                     **
 REM ** Change 512m to higher values in case you run out of memory.  **
 REM ******************************************************************
 
-set OPT=-Xmx512M -cp %CLASSPATH% -Dorg.mortbay.util.URI.charset=UTF-8 -Djava.library.path=libswt\win32\ -DKETTLE_HOME="%KETTLE_HOME%" -DKETTLE_REPOSITORY="%KETTLE_REPOSITORY%" -DKETTLE_USER="%KETTLE_USER%" -DKETTLE_PASSWORD="%KETTLE_PASSWORD%" -DKETTLE_PLUGIN_PACKAGES="%KETTLE_PLUGIN_PACKAGES%" -DKETTLE_LOG_SIZE_LIMIT="%KETTLE_LOG_SIZE_LIMIT%"
+set OPT=-Xmx512M "-Djava.ext.dirs=%JAVA_EXT_DIRS%" "-Dorg.mortbay.util.URI.charset=UTF-8" "-Djava.library.path=%LIBSPATH%" "-DKETTLE_HOME=%KETTLE_HOME%" "-DKETTLE_REPOSITORY=%KETTLE_REPOSITORY%" "-DKETTLE_USER=%KETTLE_USER%" "-DKETTLE_PASSWORD=%KETTLE_PASSWORD%" "-DKETTLE_PLUGIN_PACKAGES=%KETTLE_PLUGIN_PACKAGES%" "-DKETTLE_LOG_SIZE_LIMIT=%KETTLE_LOG_SIZE_LIMIT%"
 
 REM ***********************************************************************
 REM ** Optionally set up the options for JAAS (uncomment to make active) **
